<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gbsoft.gbmusicplayer.ui.MainActivity">
    <item
        android:id="@+id/menu_shuffle"
        android:title="@string/menu_shuffle"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/menu_repeat"
        android:title="@string/menu_repeat"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:checkable="true" />
    <item
        android:id="@+id/menu_about_me"
        android:title="@string/menu_about_me"
        android:orderInCategory="10"
        app:showAsAction="never"
        />
</menu>
